use https for condition images

--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
       <td>{{.Time.String}}</td>
       <td>{{.FeelsLike}}</td>
       <td>{{.UVI}}</td>
-      <td><img src="http://openweathermap.org/img/w/{{.Icon}}.png" alt="{{.Condition}}"></td>
+      <td><img src="https://openweathermap.org/img/w/{{.Icon}}.png" alt="{{.Condition}}"></td>
     </tr>
     {{end}}
   </table>
