--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>ozbe.weather.io</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     .content {
       max-width: 500px;
