--- a/template.html
+++ b/template.html
@@ -2,6 +2,7 @@
 <head>
   <title>ozbe.weather.io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <style>
     .content {
       max-width: 500px;
