--- a/template.html
+++ b/template.html
@@ -35,6 +35,11 @@
       text-align: center;
       vertical-align: middle;
     }
+
+    img {
+      width: 50px;
+      height: 50px;
+    }
   </style>
 </head>
 <body>
