add uv level and format uvi

--- a/template.html
+++ b/template.html
@@ -56,7 +56,7 @@
       <tr>
         <td>{{.Time.String}}</td>
         <td>{{.FeelsLike}}</td>
-        <td>{{.UVI}}</td>
+        <td>{{.UV}}<br />{{.UVLevel}}</td>
         <td><img src="https://openweathermap.org/img/w/{{.Icon}}.png" alt="{{.Condition}}"></td>
       </tr>
       {{end}}
