--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="UTF-8">
   <style>
     .content {
       max-width: 500px;
@@ -41,10 +42,10 @@
       vertical-align: middle;
     }
 
-    img {
-      width: 50px;
-      height: 50px;
-    }
+    /* .condition {
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+    } */
   </style>
 </head>
 <body>
@@ -68,7 +69,7 @@
             <td>{{.Time}}</td>
             <td>{{.Temp}}</td>
             <td>{{.UV}}<br />{{.UVLevel}}</td>
-            <td><img src="https://openweathermap.org/img/w/{{.Icon}}.png" alt="{{.Condition}}"></td>
+            <td class="condition">{{.ConditionSymbol}}</td>
           </tr>
         {{end}}
       {{end}}
