add anonymous analytics

--- a/template.html
+++ b/template.html
@@ -75,4 +75,6 @@
       </tbody>
     </table>
   </div>
+  <script data-goatcounter="https://ozbe-weather.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
