--- a/template.html
+++ b/template.html
@@ -5,9 +5,14 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="manifest" href="manifest.webmanifest">
   <style>
+    body {
+      font-family: Sans-Serif;
+    }
+    
     .content {
       max-width: 500px;
       margin: auto;
+      text-align: center;
     }
 
     table {
@@ -41,14 +46,26 @@
       vertical-align: middle;
     }
 
-    img {
+    td > img {
       width: 50px;
       height: 50px;
+    }
+
+    h1 {
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .src {
+      margin-top: 8px;
+      width: 32;
+      height: 32;
     }
   </style>
 </head>
 <body>
   <div class="content">
+    <h1>Melbourne</h1>
     <table>
       <thead>
         <tr>
@@ -74,6 +91,7 @@
       {{end}}
       </tbody>
     </table>
+    <a href="https://github.com/ozbe/weather.ozbe.io"><img class="src" src="github-mark.png" alt="Source"></a>
   </div>
   <script data-goatcounter="https://ozbe-weather.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
