--- a/template.html
+++ b/template.html
@@ -62,6 +62,10 @@
       height: 32;
     }
 
+    .highlight {
+      outline: thick solid black;
+    }
+
     canvas {
       -moz-user-select: none;
       -webkit-user-select: none;
