add missing highlight class

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
       margin: 0;
     }
 
+    .highlight {
+      outline: thick solid black;
+    }
+
     .src {
       margin-top: 8px;
       width: 32;
